# clinical-trial-gym

./: .dockerignore  .gitignore  .mailmap  .openenvignore  Dockerfile  README.md  __init__.py  client.py  docker-compose.yaml  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rl_agen  tasks.py  test_e2e.py
Patient_Simulation/: main.py  patient.txt  setup.py  setup_models.py
Patient_Simulation/clinical_trial_gym/: README.md  __init__.py  project_context.md
Patient_Simulation/clinical_trial_gym/drug/: __init__.py  admet.py  molecule.py  properties.py
Patient_Simulation/clinical_trial_gym/envs/: __init__.py  allometric_env.py  combo_ddi_env.py  phase_i_env.py
Patient_Simulation/clinical_trial_gym/pk_pd/: __init__.py  allometric_scaler.py  patient_agent.py  surrogate_ode.py
Patient_Simulation/clinical_trial_gym/science/: __init__.py  trial_priors.py
Patient_Simulation/clinical_trial_gym/tests/: conftest.py  test_layer1_layer2.py
Patient_Simulation/data/molnet/: clearance.csv  hppb.csv
RL_Agent/: agent.txt
analysis/: generate_drug_report.py  plot_episode.py
rl_agent/: README.md  __init__.py  analysis.py  client.py  drug_profile_builder.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  validate.sh
rl_agent/server/: Dockerfile  __init__.py  agents.py  app.py  dashboard.py  graders.py  requirements.txt  rl_agent_environment.py  smoke_test.py
scripts/: docker-entrypoint.sh  validate-submission.sh
server/: __init__.py  app.py  graders.py
tests/: __init__.py  test_task_registry.py
