[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxgym"
version = "1.0.0"
description = "OpenEnv clinical pharmacology environment for dose finding, allometric scaling, and DDI-aware scheduling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openenv-core>=0.2.3",
  "fastapi>=0.135.3",
  "uvicorn>=0.43.0",
  "pydantic>=2.12.5",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
py-modules = ["__init__", "client", "models", "inference", "tasks", "graders"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "rl_agent", "rl_agent.*"]

[tool.openenv]
tasks = [
  "tasks:phase_i_dosing",
  "tasks:allometric_scaling",
  "tasks:combo_ddi",
]

graders = [
  "graders:grade_phase_i_dosing",
  "graders:grade_allometric_scaling",
  "graders:grade_combo_ddi",
]